# finalproject_tsvetkova_m25_555

./: .gitignore  README.md  pyproject.toml
data/: rates.json  session.json
docs/: asciinema.cast
src/finalproject_tsvetkova_m25_555/: main.py
src/valutatrade_hub/: __init__.py  main.py
src/valutatrade_hub/cli/: interface.py
src/valutatrade_hub/core/: currencies.py  exceptions.py  models.py  usecases.py  utils.py
src/valutatrade_hub/infra/: decorators.py  logging_config.py  settings.py
src/valutatrade_hub/parser_service/: api_clients.py  config.py  storage.py  updater.py
tests/: test_auth.py  test_buy_sell.py  test_buy_sell_validation.py  test_buy_unknown_currency.py  test_currencies.py  test_logging_decorator.py  test_models.py  test_rates.py  test_settings_singleton.py  test_show_portfolio.py  test_username_length.py  test_utils.py
